Página de jogos atualizada

--- a/public/CSS/Style.css
+++ b/public/CSS/Style.css
@@ -3,7 +3,7 @@
 body {
     margin: 0;
     font-family: 'Cinzel', sans-serif;
-    background-color: #2E2E2E;
+    background-color: #494949;
     scroll-behavior: smooth;
 }
 
@@ -232,13 +232,11 @@ a {
     position: fixed;
     top: 0;
     left: 0;
-    border: solid red 2px;
     height: 12vh;
     width: 100%;
 }
 
 .logo {
-    border: solid rgb(0, 89, 255) 2px;
     height: 100%;
     width: 10%;
 }
@@ -248,7 +246,6 @@ a {
 }
 
 .navbar {
-    border: solid rgb(0, 255, 42) 2px;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -257,7 +254,6 @@ a {
 }
 
 .navbar-index {
-    border: solid rgb(0, 255, 42) 2px;
     display: flex;
     flex-direction: row;
     justify-content: end;
@@ -267,17 +263,16 @@ a {
 
 #header_home {
     background-color: #2E2E2E;
+    box-shadow: 10px 5px 5px black;
 }
 
 .btn-header {
-    /* width: 15%; */
     background-color: transparent;
     border: 0;
     cursor: pointer;
-    font-size: 12pt;
+    font-size: 14pt;
     font-family: Cinzel;
     color: #E3DDA4;
-    border: rgb(153, 134, 51) solid 2px;
 }
 
 .btn-index {
@@ -288,12 +283,10 @@ a {
     font-size: 12pt;
     font-family: Cinzel;
     color: #E3DDA4;
-    border: rgb(153, 134, 51) solid 2px;
 }
 
 .banner-index .container {
     display: flex;
-    border: solid rgb(208, 255, 0) 2px;
     width: 100%;
     height: 600px;
     background-size: cover;
@@ -304,12 +297,11 @@ a {
 }
 
 .footer .container {
-    border: solid rgb(255, 0, 191) 2px;
     display: flex;
     flex-direction: column;
     height: 200px;
     width: 100%;
-    background-color: #2E2E2E;
+    background-color: #000000;
 }
 
 .footer .container img {
@@ -337,8 +329,8 @@ a {
     margin-left: 10%;
     margin-top: 6%;
     width: 12%;
-    border: 1px solid red;
-    background-color: #2E2E2E;
+    background-color: #000000;
+    border-radius: 10px;
     justify-content: center;
     align-items:center;
 }
@@ -349,7 +341,7 @@ a {
 }
 
 .container-inicio {
-    border: rebeccapurple solid 2px;
+
     margin-top: 78px;
     height: 600px;
     width: 100%;
@@ -358,7 +350,6 @@ a {
 .banner-imagem {
     height: 100%;
     width: 100%;
-    border: rgb(51, 133, 153) solid 2px;
 }
 
 .metricas .container {
@@ -367,19 +358,15 @@ a {
     align-items: center;
     height: 600px;
     width: 100%;
-    border: rgb(10, 107, 23) solid 2px;
-
 }
 
 .metricas .container label {
     margin: auto;
-    border: rgb(153, 134, 51) solid 2px;
     font-size: 30pt;
     color: #E3DDA4;
 }
 
 .container-inicio img {
-    border: rgb(153, 51, 59) solid 2px;
     height: 100%;
     width: 100%;
 }
@@ -387,7 +374,6 @@ a {
 .grafico {
     margin: auto;
     display: flex;
-    border: rgb(180, 18, 18) solid 2px;
     height: 70%;
     width: 70%;
 }
@@ -404,26 +390,38 @@ a {
 /* Inicio Páginas de jogos */
 
 .conteudo {
-    border: green solid 2px;
-    width: 100%;
-}
-.conteudo .container {
-    border: blueviolet solid 2px;
-    height: 800px;
-    width: 80%;
-    margin: auto;
+    width: 100%; 
 }
 
+.conteudo .container {
+    min-height: 100px;
+    max-height: 4000px;
+    width: 80%;
+    margin: auto;
+    white-space: pre-line;
+    color: #ffffff;
+    font-size: 14pt;
+}
+
+p {
+    color: #E3DDA4;
+    font-size: 18pt;
+    text-align: center;
+}
+
+.informacoes{
+    color: #ffffff;
+    font-size: 14pt;
+    align-items: center;
+}
 .container-personagens {
     display: flex;
-    border: rebeccapurple solid 2px;
     margin-top: 78px;
     height: 300px;
     width: 100%;
 }
 
-.container-personagens img {
-    border: #ffffff solid 2px;  
+.container-personagens img { 
     margin: auto;
     height: 100%;
 }
