--- a/public/CSS/Style.css
+++ b/public/CSS/Style.css
@@ -1,10 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Cinzel+Decorative&family=Cinzel:wght@400;700&display=swap');
 body {
     margin: 0;
-    font-family: 'Cinzel', sans-serif;
+    font-family: 'Cinzel Decorative';
     background-color: #494949;
-    scroll-behavior: smooth;
 }
 
 /*Página de Login*/
@@ -80,6 +78,7 @@ body {
     border-radius: 10px;
     padding: 15px;
     background: #494949;
+    font-family: cinzel decorative;
     color: #ffffff;
     font-size: 12pt;
     box-shadow: 0px 10px 40px #00000056;
@@ -93,7 +92,7 @@ body {
 }
 
 .btn-login {
-    font-family: 'cinzel';
+    font-family: 'Cinzel Decorative';
     font-size: 12pt;
     width: 100%;
     padding: 16px 0px;
@@ -165,7 +164,6 @@ body {
     display: flex;
     width: 100%;
     flex-direction: column;
-    /* align-items: flex-start; */
     justify-content: center;
     margin: 10px 0px;
 }
@@ -202,7 +200,7 @@ body {
 }
 
 .btn-cadastrar {
-    font-family: 'cinzel';
+    font-family: 'Cinzel Decorative';
     font-size: 12pt;
     width: 100%;
     padding: 16px 0px;
@@ -234,15 +232,19 @@ a {
     left: 0;
     height: 12vh;
     width: 100%;
+    z-index: 1000;
 }
 
 .logo {
+    display: flex;
     height: 100%;
     width: 10%;
+    align-items: center;
+    justify-content: center;
 }
 
 .logo img {
-    height: 100%;
+    height: 90%;
 }
 
 .navbar {
@@ -266,12 +268,23 @@ a {
     box-shadow: 10px 5px 5px black;
 }
 
+.btn-header:hover {
+    text-shadow: 0px 0px 10px #E3DDA4;
+}
+
+.btn-header:hover {
+    text-shadow: 0px 0px 10px #E3DDA4;
+    transform: scale(1.1);
+    transition: all 0.5s;
+}
+
+
 .btn-header {
     background-color: transparent;
     border: 0;
     cursor: pointer;
     font-size: 14pt;
-    font-family: Cinzel;
+    font-family: 'Cinzel Decorative';
     color: #E3DDA4;
 }
 
@@ -281,7 +294,7 @@ a {
     border: 0;
     cursor: pointer;
     font-size: 12pt;
-    font-family: Cinzel;
+    font-family: 'Cinzel Decorative';
     color: #E3DDA4;
 }
 
@@ -299,20 +312,21 @@ a {
 .footer .container {
     display: flex;
     flex-direction: column;
-    height: 200px;
+    height: 280px;
     width: 100%;
     background-color: #000000;
 }
 
 .footer .container img {
-    height: 80%;
+    height: 30%;
     margin: auto;
 }
 
 .footer .container label {
     margin: auto;
     font-size: 10pt;
-    font-family: Cinzel;
+    white-space: pre-line;
+    font-family: 'Cinzel';
     color: #E3DDA4;
 }
 
@@ -341,7 +355,6 @@ a {
 }
 
 .container-inicio {
-
     margin-top: 78px;
     height: 600px;
     width: 100%;
@@ -356,8 +369,10 @@ a {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 600px;
+    min-height: 600px;
+    max-height: 800;
     width: 100%;
+    margin-top: 40px;
 }
 
 .metricas .container label {
@@ -383,6 +398,19 @@ a {
     margin: auto;
     height: 90%;
     width: 90%;
+}
+
+.welcome {
+    position: absolute;
+    top: 300px;
+    left: 60px;
+    font-size: 46px;
+    color: #E3DDA4;
+    text-shadow: 0px 0px 5px #000000;
+    white-space: pre-line;
+    padding: 20px;
+    border-radius: 20px;
+    background-color: rgb(0, 0, 0, 0.400);
 }
 /* Fim Inicio */
 
