--- a/public/CSS/Style.css
+++ b/public/CSS/Style.css
@@ -258,6 +258,10 @@ a {
     justify-content: center;
 }
 
+#idlogo {
+    background-color: rgb(0, 0, 0, 0.400);
+}
+
 .logo img {
     height: 90%;
 }
@@ -278,10 +282,6 @@ a {
     width: 100%;
     background-color: rgb(0, 0, 0, 0.400);
 }
-
-/* .header-index .container .logo {
-    background-color: rgb(0, 0, 0, 0.400);
-} */
 
 #header_home {
     background-color: #2E2E2E;
@@ -376,7 +376,7 @@ a {
     flex-direction: column;
     position: fixed;
     height: 220px;
-    margin-left: 10%;
+    margin-left: 14%;
     margin-top: 0%;
     width: 12%;
     background-color: #2E2E2E;
@@ -486,7 +486,12 @@ p {
     display: flex;
     margin-top: 78px;
     min-height: 300px;
-    max-height: 2000px;
+    max-height: 4000px;
+    width: 100%;
+}
+
+.container-personagens img{
+    height: 100%;
     width: 100%;
 }
 
@@ -499,11 +504,11 @@ p {
 .titulo {
     position: absolute;
     top: 600px;
-    left: 45%;
-    text-align: center;
+    left: 42%;
+    width: 100%;
     font-size: 40pt;
     color: #E3DDA4;
-
+    text-shadow: 0px 0px 5px #000000;
 }
 .criaturas {
     display: flex;
@@ -528,8 +533,8 @@ p {
 }
 
 .img-conteudo {
-    height: 80%;
-    width: 20%;
+    height: 200px;
+    /* width: 20%; */
     padding: 30px;
     margin: auto;
 }
@@ -552,3 +557,11 @@ h2 {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.titulo-personagens {
+    position: absolute;
+    top: 650px;
+    right: 30px;
+    text-align: center;
+    font-size: 40pt;
+    color: #E3DDA4;
+}
